@@ -18,6 +18,7 @@ export(nimbleUserNamespace)
 export(getDimension)
 export(getDistributionInfo)
 export(isDiscrete)
+export(isUserDefined)
 export("nfVar<-")
 export("values<-")
 export(MCMCsuite)
